--- a/package.json
+++ b/package.json
@@ -29,12 +29,26 @@
   "peerDependencies": {},
   "devDependencies": {
     "axios": "0.17.1",
-    "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.3",
+    "babel-eslint": "8.2.6",
+    "babel-jest": "23.4.0",
+    "babel-loader": "7.1.5",
+    "babel-plugin-dynamic-import-node": "2.0.0",
+    "babel-plugin-module-resolver": "3.1.1",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.7.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "react": "16.4.1",
     "react-dom": "16.4.1",
-    "webpack": "4.16.1"
+    "webpack": "4.16.1",
+    "webpack-cli": "3.1.0",
+    "webpack-node-externals": "1.7.2",
+    "webpack-pwa-manifest": "3.6.2"
   }
 }
