--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cross-env": "7.0.3",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "webextension-polyfill": "^0.10.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   },
