--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "homepage": "https://github.com/mattermost/mattermost-chrome-extension",
   "keywords": [
     "mattermost",
-    "chrome",
+    "browser",
     "extension"
   ],
   "dependencies": {
