--- a/package.json
+++ b/package.json
@@ -26,18 +26,18 @@
   },
   "peerDependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/plugin-transform-runtime": "^7.19.1",
-    "@babel/preset-env": "^7.19.4",
-    "@babel/preset-react": "^7.18.6",
-    "@babel/runtime": "^7.19.4",
-    "babel-loader": "^8.2.5",
+    "@babel/core": "7.19.3",
+    "@babel/plugin-transform-runtime": "7.19.1",
+    "@babel/preset-env": "7.19.4",
+    "@babel/preset-react": "7.18.6",
+    "@babel/runtime": "7.19.4",
+    "babel-loader": "8.2.5",
     "cross-env": "7.0.3",
-    "html-loader": "^4.2.0",
-    "html-webpack-plugin": "^5.5.0",
-    "webextension-polyfill": "^0.10.0",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "html-loader": "4.2.0",
+    "html-webpack-plugin": "5.5.0",
+    "webextension-polyfill": "0.10.0",
+    "webpack": "5.74.0",
+    "webpack-cli": "4.10.0"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --progress",
